# AI_Agent_Security

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_ENHANCED.md  CLAUDE.md  COMMANDS_TO_RUN.txt  COMPLETE_PROJECT_SUMMARY.md  CORS_SETUP.md  DEVELOPMENT_GUIDE.md  HOW_TO_RUN.md  HOW_TO_USE_THESE_DOCUMENTS.md  INTEGRATION_COMPLETE_SUMMARY.md  PHASE_2_WEEK_3_4_COMPLETE.md  PHASE_3_META_LEARNING.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_FILES_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_START_IMPLEMENTATION.md  README.md  RUN_DEMOS.sh  SETUP_AND_RUN.md  SUMMARY_OF_RECOMMENDATIONS.txt  TESTING_GUIDE.md  TEST_LOGIN.md  TODO.md  alembic.ini  dev-restart.sh  docker-compose.yml  package-lock.json  pyproject.toml  quick_test.py  requirements.txt  run_celery_worker.py  run_integration_tests.sh  setup.py  test_database.py  test_false_positive.py  test_gateway.py  test_pii.py  (+1 more)
.github/workflows/: ci.yml  deploy.yml
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init-db.sql  prometheus.yml
docs/: PHASE2_SHADOW_AGENTS_GUIDE.md
docs/api/: API_DOCUMENTATION_INDEX.md  API_FLOW_DOCUMENTATION.md
docs/business/: BUSINESS_OVERVIEW.md  EXECUTIVE_SUMMARY_FOR_STARTUP.md  STARTUP_TRANSFORMATION_GUIDE.md
docs/compliance/: INFINITE_LOOP_DETECTION.md  PII_DETECTION_STATUS.md
docs/deployment/: DATABASE_SETUP.md  DOCKER_QUICK_START.md  IMPLEMENTATION_GUIDE.md  POETRY_SETUP.md
docs/roadmap/: ADVANCED_FEATURES_INDUSTRY_ROADMAP.md  MONTH_1_2_INFRASTRUCTURE_GUIDE.md  MONTH_3_4_ADVANCED_SECURITY_GUIDE.md  MONTH_3_4_BACKEND_IMPLEMENTATION.md  MONTH_3_4_FRONTEND_IMPLEMENTATION.md  PROJECT_ROADMAP_AND_NEXT_STEPS.md  TECHNICAL_IMPLEMENTATION_ROADMAP.md
docs/runbooks/: DISASTER_RECOVERY.md
docs/testing/: TESTING_GUIDE.md  TEST_PII_NOW.md
examples/: basic_usage.py  demo_integrated_system.py  demo_phase1.py  demo_phase2.py  demo_phase3.py  langchain_integration.py
infrastructure/backup/: backup-audit-logs.py  lifecycle-policy.json  requirements.txt
infrastructure/ecs/: api-task-definition.json  celery-task-definition.json  migration-task-definition.json
infrastructure/monitoring/: alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml
kubernetes/: deployment.yaml  postgres.yaml  redis.yaml  secrets.yaml
migrations/: env.py
migrations/versions/: 1e937302beb3_add_email_logs_table_with_rls.py  2f8a45c1b9e7_add_password_management_fields_to_users.py  46dcb1d07b70_add_row_level_security_policies_for_.py  900dc3026ec6_create_multi_tenant_schema_with_8_core_.py  add_policy_individual_columns.py
sentinel/: __init__.py  audit.py  content_moderation.py  gateway.py  input_guard.py  output_guard.py  red_team.py  schemas.py  state_monitor.py
sentinel/analytics/: pipeline.py  risk_scoring.py
sentinel/api/: __init__.py  config.py  (+1 more)
sentinel_agentic_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: README.md  requirements-test.txt  test_data_json.txt  test_example.py  test_phase1_risk_scoring.py  test_phase2_shadow_agents.py  test_saas_multitenant.py
web/: .env.example  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+221 files in other folders)
