[tool.poetry]
name = "sentinel-agentic-framework"
version = "0.1.0"
description = "Zero-Trust AI Security Control Plane for LLM Agents - SaaS Platform"
authors = ["Sentinel Security Team <security@sentinel.ai>"]
readme = "README.md"
homepage = "https://github.com/yourusername/sentinel-agentic-framework"
repository = "https://github.com/yourusername/sentinel-agentic-framework"
documentation = "https://sentinel-docs.example.com"
license = "MIT"
keywords = ["security", "ai", "llm", "agent", "pii-detection", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "sentinel"}]

[tool.poetry.dependencies]
python = "^3.10"

# Core Dependencies
pydantic = "^2.0.0"
langgraph = "^0.0.20"
langchain = "^0.1.0"
python-dateutil = "^2.8.0"

# Security and Crypto
cryptography = "^41.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

# NLP and ML
spacy = "^3.7.0"
transformers = "^4.35.0"
sentence-transformers = "^2.2.0"

# FastAPI Server (SaaS Platform)
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
email-validator = "^2.1.0"

# Database (Multi-Tenant)
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Cache & Background Jobs
redis = "^5.0.1"
celery = {extras = ["redis"], version = "^5.3.0"}

# Report Generation (Phase 3)
weasyprint = "^60.0"
pandas = "^2.1.0"
openpyxl = "^3.1.0"
pillow = "^10.0.0"

# Observability
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-exporter-otlp = "^1.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
mypy = "^1.7.0"
httpx = "^0.26.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
sentinel = "sentinel.cli:main"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security tests",
    "slow: Slow tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
